--- a/StudentManagment/wwwroot/css/site.css
+++ b/StudentManagment/wwwroot/css/site.css
@@ -310,7 +310,9 @@ input[type="file"]::-webkit-file-upload-button {
 .search-div {
     display: flex;
     padding: 15px;
-    justify-content: space-between
+    justify-content: end;
+    align-items: center;
+    gap:15px;
 }
 
 
@@ -341,12 +343,27 @@ input[type="file"]::-webkit-file-upload-button {
     border: 1px solid green !important;
 }
 
-    .send-email-btn:hover {
+.clear-btn {
+    width: max-content;
+    height: 50px;
+    background-color: grey !important;
+    color: white !important;
+    border-radius: 10px !important;
+    border: 1px solid grey !important;
+}
+    .clear-btn:hover {
         background-color: white !important;
-        color: green !important;
-        border: 1px solid green !important;
+        color: grey !important;
+        border: 1px solid grey !important;
         border-radius: 10px !important;
     }
+
+.send-email-btn:hover {
+    background-color: white !important;
+    color: green !important;
+    border: 1px solid green !important;
+    border-radius: 10px !important;
+}
 
 #symptoms {
     height: 120px;
@@ -1585,5 +1602,12 @@ h5 {
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .index-form 
+    {
+        flex-direction:column;
     }
 }
